tests/snapshot/error/regexp/duplicate_named_capture_group_after_disjunction.js
/(?:(?<x>a)|(?<x>b))(?<x>c)/;
